v1/getting-started/demo-application.mdx
---
title: Ứng dụng demo
---

import V1EOLWarning from "/snippets/v1-eol-warning.mdx";

<V1EOLWarning />

Chúng tôi đã xây dựng một ứng dụng demo cho Inertia.js mang tên [Ping CRM](https://demo.inertiajs.com). Ứng dụng này sử dụng Laravel và Vue. Bạn có thể xem source code trên [GitHub](https://github.com/inertiajs/pingcrm).

Demo Ping CRM được host trên Heroku và cơ sở dữ liệu được reset mỗi giờ. Vui lòng cẩn trọng khi chỉnh sửa dữ liệu.

[![Ping CRM](/images/pingcrm.png)](https://demo.inertiajs.com)Ngoài phiên bản Vue của Ping CRM, chúng tôi còn duy trì một phiên bản Svelte của ứng dụng, có thể xem [trên GitHub](https://github.com/inertiajs/pingcrm-svelte).

## Bên thứ ba

Ngoài ứng dụng demo chính thức, Ping CRM còn được chuyển sang nhiều ngôn ngữ lập trình và framework khác nhau.

- [Ruby on Rails/Vue](https://github.com/ledermann/pingcrm/) bởi Georg Ledermann
- [Laravel/React](https://github.com/Landish/pingcrm-react) bởi Lado Lomidze
- [Laravel/Svelte](https://github.com/zgabievi/pingcrm-svelte) bởi Zura Gabievi
- [Laravel/Mithril.js](https://github.com/tbreuss/pingcrm-mithril) bởi Thomas Breuss
- [Yii 2/Vue](https://github.com/tbreuss/pingcrm-yii2) bởi Thomas Breuss
- [Symfony/Vue](https://github.com/aleksblendwerk/pingcrm-symfony) bởi Aleks Seltenreich
- [Clojure/React](https://github.com/prestancedesign/pingcrm-clojure) bởi Michaël Salihi

---

## Tài liệu chính thức

Bài dịch này được đối chiếu từ [tài liệu Inertia.js v1 chính thức](https://inertiajs.com/docs/v1/getting-started/demo-application). Nếu có khác biệt do phiên bản hoặc cập nhật mới, hãy ưu tiên tài liệu chính thức làm nguồn tham chiếu.
