v2/getting-started/demo-application.mdx
---
title: Ứng dụng demo
---

import V2UpgradeWarning from "/snippets/v2-upgrade-warning.mdx";

<V2UpgradeWarning />

Chúng tôi đã xây dựng một ứng dụng demo cho Inertia.js mang tên [Ping CRM](https://demo.inertiajs.com). Ứng dụng này sử dụng Laravel và Vue. Bạn có thể xem source code trên [GitHub](https://github.com/inertiajs/pingcrm).

Demo Ping CRM được host trên Heroku và cơ sở dữ liệu được reset mỗi giờ. Vui lòng cẩn trọng khi chỉnh sửa dữ liệu.

<Frame>
[![Ping CRM](/images/pingcrm.png)](https://demo.inertiajs.com)
</Frame>

Ngoài phiên bản Vue của Ping CRM, chúng tôi còn duy trì một phiên bản Svelte của ứng dụng, bạn có thể xem [trên GitHub](https://github.com/inertiajs/pingcrm-svelte).

## Bên thứ ba

Ngoài ứng dụng demo chính thức, Ping CRM còn được chuyển sang nhiều ngôn ngữ lập trình và framework khác nhau.

| Nền tảng                                 | Tác giả               |
|:-------------------------------------|:---------------------|
| [Clojure/React](https://github.com/prestancedesign/pingcrm-clojure) | Michaël Salihi       |
| [Echo/Vue](https://github.com/kohkimakimoto/pingcrm-echo)          | Kohki Makimoto       |
| [Grails/Vue](https://github.com/matrei/pingcrm-grails)              | Mattias Reichel      |
| [Laravel/React](https://github.com/Landish/pingcrm-react)            | Lado Lomidze        |
| [Laravel/Mithril.js](https://github.com/tbreuss/pingcrm-mithril)    | Thomas Breuss        |
| [Laravel/Svelte](https://github.com/zgabievi/pingcrm-svelte)        | Zura Gabievi        |
| [Ruby on Rails/Vue](https://github.com/ledermann/pingcrm/)          | Georg Ledermann      |
| [Symfony/Vue](https://github.com/aleksblendwerk/pingcrm-symfony)    | Aleks Seltenreich    |
| [Yii 2/Vue](https://github.com/tbreuss/pingcrm-yii2)                | Thomas Breuss        |

---

## Tài liệu chính thức

Bài dịch này được đối chiếu từ [tài liệu Inertia.js v2 chính thức](https://inertiajs.com/docs/v2/getting-started/demo-application). Nếu có khác biệt do phiên bản hoặc cập nhật mới, hãy ưu tiên tài liệu chính thức làm nguồn tham chiếu.
